2003-09-30	ujwal

    * All periodic timer code for each open session is called by a single 
      timer from PsedoTerminal. Thus there is one thread per window. 
      This should reduce the number of timer threads running and hence 
      lessen the load on the CPU.

2003-09-29	fabian

    * Fixed a bug in ANSICSI_ECH code. It shouldn't move cursor position.
    
2003-09-27	fabian

    * Added a section of Interesting Links in resources section of website.
    
2003-09-27	ujwal

    * Disabling log start/stop menus depending on current logging status.

2003-09-26	fabian

    * Updated French, Japanese and Korean localizations.
    * Changed versumber to 0.7.8
    * Updated help files and website files for new version.
    
2003-09-26	ujwal

    * Changed bookmark shortcut modifiers from Cmd-opt to 
      Cmd-ctrl.

2003-09-25	ujwal

    * Fixed bug in showCursor accessing attribute at invalid index.
    
2003-09-24	ujwal

    * Disabled re-selection of text since that was interfering with copy/paste 
      in other apps.

2003-09-23	fabian

    * Updated zh_CN and zh_TW localiztions.
    
2003-09-23	ujwal

    * While printing, we print a back-on-white copy of the textview.

2003-09-22	ujwal

    * Added iTerm-Aqua.jpg as the default background image.
    
2003-09-21	ujwal

    * When PTYSession: terminate is called, we wait for shell task to exit 
      after sending it the SIGHUP signal.
    * Changed some NSImage calls of initByReferencingFile to initWithContentsOfDile 
      so that an attempt to init the image is made immediately.

2003-09-16	ujwal

    * Added support to change background image after session has been opened.
    * Added scripting support to set background image.

2003-09-15	fabian

    * Fixed a bug that causes wrong color of new line character (introduced in 0.7.7).
    
2003-09-15	ujwal

    * Removed "Choose" button for background images in the session 
      preferenced UI.

2003-09-14	fabian
